Fix CI workflow: use 'uv run' for tests

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -60,4 +60,4 @@ jobs:
           SECRET_KEY: dummy-key-for-ci
 
         run: |
-          python manage.py test
+          uv run python manage.py test
